src/objects/Sprint__c.object
<CustomObject>
    <fields>
        <fullName>Date_finish__c</fullName>
        <formula>TODAY() + 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date finish</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Day__c</fullName>
        <label>Start Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Estimate__c</fullName>
        <label>Total Estimate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 week</fullName>
                </value>
                <value>
                    <fullName>2 weeks</fullName>
                </value>
                <value>
                    <fullName>1 month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Estimate_of_Tasks__c</fullName>
        <label>Total Estimate of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>new</fullName>
                </value>
                <value>
                    <fullName>in progress</fullName>
                </value>
                <value>
                    <fullName>completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sprint</label>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>